[package]
name = "distance-on-oled"
version = "0.1.0"
authors = ["tobiaszfilar"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.5.0"
embassy-time = "0.3"
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.13.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32c6", "async", "embedded-hal-02" ] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c6", "integrated-timers"] }
esp-println = { version = "0.10.0", features = ["esp32c6", "log"] }
heapless = "0.8.0"
log = { version = "0.4.21" }
ssd1306 = "0.8.4"
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
